# jyafn

./: .gitignore  Cargo.toml  Makefile  license-apache  license-mit  readme.md
.github/workflows/: build-go.yaml  build-so.yaml  build-wheel.yaml  release.yaml  test-build-ext.yaml
cjyafn/: Cargo.toml  build.rs  cjyafn.h  jyafn.c  jyafn_so.c
cjyafn/src/: lib.rs  test.rs
docs/: deploying-a-jyafn-in-go.md  index.md  mkdocs.yml  pyproject.toml  the-jyafn-starter-tutorial.md  to-serve-jyafn.md  why-jyafn.md  working-with-extensions.md
docs/docs/: index.md
docs/docs/documentation/: index.md  to-serve-jyafn.md
docs/docs/documentation/extensions/: dummy.md  index.md  lightgbm.md
docs/docs/getting-started/: index.md
docs/docs/tutorials/: deploying-a-jyafn-in-go.md  index.md  working-with-extensions.md
docs/docs/tutorials/resources/: pca_a.npy  pca_b.npy
docs/extensions/: dummy.md  index.md  lightgbm.md
docs/resources/: campaign-pca.csv  pca_a.npy
jyafn/: Cargo.toml  build.rs  vendored
jyafn-ext/: Cargo.toml  Makefile  build-all.sh  export-all.sh  install-all.sh  jyafn_ext.h  readme.md  run-all.sh
jyafn-ext/extensions/dummy/: Cargo.toml  Makefile
jyafn-ext/extensions/dummy/src/: lib.rs
jyafn-ext/extensions/lightgbm/: Cargo.toml  Makefile
jyafn-ext/extensions/lightgbm/src/: lib.rs
jyafn-ext/extensions/ppca/: Cargo.toml
jyafn-ext/extensions/ppca/src/: lib.rs
jyafn-ext/src/: fn_error.rs  io.rs  layout.rs  lib.rs  outcome.rs  resource.rs
jyafn-go/: go.mod  main.go
jyafn-go/cmd/: main.go
jyafn-go/pkg/jyafn/: cjyafn.h  ffi.go  ffi_test.go  function.go  graph.go  jyafn.go  jyafn_test.go  layout.go  utils.go
jyafn-python/: Cargo.toml  Makefile  Pipfile  from_components.ssa  pyproject.toml  requirements.txt
jyafn-python/python/jyafn/: __init__.py  cli.py  cloud.py  describe.py  jyafn.pyi  np_dropin.py
jyafn-python/python/jyafn/cli/: __init__.py  cloud.py  ext.py
jyafn-python/src/: dataset.rs  extension.rs  function.rs  layout.rs  lib.rs  mapping.rs  pfunc.rs  resource.rs
jyafn-python/src/graph/: indexed.rs  mod.rs  ref.rs
jyafn-python/tests/: __main__.py  assert.py  dataset.py  datetime_.py  describe.py  eval_const.py  extensions.py  future_annotations.py  illegal.py  index.py  linalg.py  logic.py  mapping.py  pfunc.py  pickling.py  resources.py  sample.py  serde.py  showcase.py  simple_graph.py  subgraph.py  tensors.py  test_dataset.py  test_logic.py  tuples.py
jyafn/src/: const.rs  dataset.rs  extension.rs  function.rs  layout.rs  lib.rs  op.rs  optimize.rs  pfunc.rs  utils.rs
jyafn/src/compile/: mod.rs  optimize.rs  qbe_app.rs
jyafn/src/graph/: check.rs  mod.rs  node.rs  serde.rs  size.rs  type.rs
jyafn/src/graph/compile/: mod.rs  optimize.rs  qbe_app.rs
jyafn/src/layout/: decode.rs  encode.rs  mod.rs  ref_value.rs  symbols.rs  visitor.rs
jyafn/src/mapping/: mod.rs  murmur.rs
jyafn/src/op/: arithmetic.rs  call.rs  compare.rs  convert.rs  list.rs  logic.rs  mapping.rs  mod.rs  resource.rs
jyafn/src/resource/: dummy.rs  external.rs  lightgbm.rs  linalg.rs  mod.rs
jyafn/src/utils/: mod.rs  murmur.rs
qbe/: LICENSE  Makefile  alias.c  all.h  cfg.c  emit.c  main.c  mem.c  parse.c  util.c
qbe-rs/src/: lib.rs
qbe/arm64/: emit.c  isel.c
qbe/doc/: il.txt
qbe/rv64/: emit.c
qbe/test/: alias1.ssa  fpcnv.ssa  mem3.ssa
utils/: build-linux-so.sh  build-linux-wheels.sh  build-macos-wheels.sh  release-crates-io.sh  release-pypi.sh
