[package]
name = "cjyafn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doc = false
name = "cjyafn"
crate-type = ["cdylib"]

[dependencies]
get-size = "0.1.4"
jyafn = { path = "../jyafn" }
libloading = "0.8.4"
lightgbm = "0.2.3"
serde_json = "1.0.115"
smallvec = { version = "1.13.2", features = ["serde"] }

[build-dependencies]
cbindgen = "0.26.0"
