[package]
name = "cjyafn"
version = "0.3.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "cjyafn"
crate-type = ["cdylib"]

[dependencies]
get-size = "0.1.4"
jyafn = { path = "../jyafn", default-features = false }
serde_json = "1.0.115"

[build-dependencies]
cbindgen = "0.26.0"
