[tool.poetry]
name = "docs"
version = "0.1.0"
description = ""
authors = ["Pedro Arruda <parruda@findhotel.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.31"
mkdocs-nav-weight = "^0.2.0"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
