[package]
name = "jyafn-python"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
doc = false
name = "jyafn"
crate-type = ["cdylib"]

[dependencies]
byte-slice-cast = "1.2.2"
jyafn = { path = "../jyafn" }
pyo3 = { version = "0.21.0", features = ["extension-module"] }
serde_json = "1.0.115"
