[package]
name = "jyafn-python"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
doc = false
name = "jyafn"
crate-type = ["cdylib"]

[dependencies]
chrono = "0.4.37"
get-size = "0.1.4"
jyafn = { path = "../jyafn" }
pyo3 = { version = "0.22.0", features = ["extension-module"] }
serde_json = "1.0.115"
