[build-system]
requires = ["maturin>=1.5,<1.6"]
build-backend = "maturin"

[tool.maturin]
python-source = "python"

[project]
name = "jyafn-python"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "numpy>=1.13",
    "click>=8.1",
    "click_default_group>=1.2",
]

[project.scripts]
jyafn = "jyafn.cli:main"
