[build-system]
requires = ["maturin>=1.5,<1.8"]
build-backend = "maturin"

[tool.maturin]
python-source = "python"

[project]
name = "jyafn"
requires-python = ">=3.7"
readme = "../readme.md"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "numpy>=1.13",
    "click>=8.1",
    "click_default_group>=1.2",
    "semver>=3",
]

[project.scripts]
jyafn = "jyafn.cli:main"
