[package]
name = "jyafn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "jyafn"
path = "src/lib.rs"

[features]
default = ["map-reduce"]
map-reduce = ["dep:num_cpus", "dep:rayon"]

[dependencies]
bincode = "1.3.3"
byte-slice-cast = "1.2.2"
chrono = "0.4.37"
downcast-rs = "1.2.1"
get-size = { version = "0.1.4", features = ["derive"] }
hashbrown = { version = "0.14.3", features = ["serde", "raw"] }
lazy_static = "1.4.0"
maplit = "1.0.2"
memmap = "0.7.0"
num_cpus = { version = "1.16.0", optional = true }
object = "0.34.0"
qbe = { path = "../vendored/qbe-rs" }
rand = "0.8.5"
rayon = { version = "1.10.0", optional = true }
serde = { version = "1.0.197", features = ["rc"] }
serde_derive = "1.0.197"
serde_json = "1.0.115"
smallvec = { version = "1.13.2", features = ["serde"] }
special-fun = "0.3.0"
tempfile = "3.10.1"
thiserror = "1.0.58"
thread_local = "1.1.8"
typetag = "0.2.16"
zip = { version = "0.6.6", default-features = false, features = ["deflate"] }
