[package]
name = "jyafn"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "jyafn"
path = "src/lib.rs"

[features]
default = ["lightgbm"]
lightgbm = ["dep:lightgbm3"]

[dependencies]
bincode = "1.3.3"
byte-slice-cast = "1.2.2"
chrono = "0.4.37"
downcast-rs = "1.2.1"
dyn-clone = "1.0.17"
get-size = { version = "0.1.4", features = ["derive"] }
hashbrown = { version = "0.14.3", features = ["serde", "raw"] }
lazy_static = "1.4.0"
libloading = "0.8.4"
lightgbm3 = { version = "1.0.2", optional = true }
maplit = "1.0.2"
memmap = "0.7.0"
no-panic = "0.1.29"
qbe = { path = "../vendored/qbe-rs" }
rand = "0.8.5"
serde = { version = "1.0.197", features = ["rc"] }
serde_derive = "1.0.197"
serde_json = "1.0.115"
smallvec = { version = "1.13.2", features = ["serde"] }
special-fun = "0.3.0"
tempfile = "3.10.1"
thiserror = "1.0.58"
thread_local = "1.1.8"
typetag = "0.2.16"
zip = { version = "2.1.3", default-features = false, features = ["deflate"] }
