[package]
name = "jyafn"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "jyafn"
path = "src/lib.rs"

[features]

[dependencies]
bincode = "1.3.3"
byte-slice-cast = "1.2.2"
chrono = "0.4.37"
downcast-rs = "1.2.1"
dyn-clone = "1.0.17"
get-size = { version = "0.1.4", features = ["derive"] }
glob = "0.3.1"
hashbrown = { version = "0.14.3", features = ["serde", "raw"] }
home = "0.5.9"
lazy_static = "1.4.0"
libloading = "0.8.4"
qbe = { path = "../vendored/qbe-rs" }
rand = "0.8.5"
scopeguard = "1.2.0"
semver = { version = "1.0.23", features = ["serde", "std"] }
serde = { version = "1.0.197", features = ["rc"] }
serde_derive = "1.0.197"
serde_json = "1.0.115"
serde_with = "3.9.0"
special-fun = "0.3.0"
tempfile = "3.10.1"
thiserror = "1.0.58"
thread_local = "1.1.8"
typetag = "0.2.16"
zip = { version = "2.1.3", default-features = false, features = ["deflate"] }
